# WayLandIE

.github/scripts/: build-fex-emu.sh  build-waylandie-dmabuf-layer.sh  build-winewayland-driver.sh
.github/scripts/freetype-bionic/lib/pkgconfig/: freetype2.pc
.github/scripts/patches/: add_esync_include.patch  ntdll-fex-stubs.patch  ntdll-spec-fex-exports.patch  ntdll-stack-size.patch  winevulkan-android-surface.patch  winevulkan-dmabuf-thunks.patch
.github/workflows/: pr-ci.yml  tag-apk-artifacts.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/app/config/: SettingsConfig.kt
app/src/main/app/service/download/: DownloadCoordinator.kt
app/src/main/app/shell/: LibraryGameLaunchScreen.kt  UnifiedActivity.kt  WorkshopScreen.kt
app/src/main/assets/: imagefs.tzst  waylandie_dmabuf_layer.json
app/src/main/assets/metadata/: debug_channels.json  fexcore_env_vars.json
app/src/main/cpp/: CMakeLists.txt  ahb_vk_3d_shaders.h  android_api_override.h  crash_handler.c  crash_handler.h  surface_control_c_compat.h  surface_control_cpp_shim.cpp  surface_control_cpp_shim.h  waylandie-wayland-bridge.c  waylandie_display_native.c  wine_launcher.c
app/src/main/cpp/vulkan_layer/: waylandie_dmabuf_layer.c  waylandie_dmabuf_layer.json
app/src/main/cpp/winewayland-drv/: Makefile.in.patch  config.h  linux-dmabuf-unstable-v1-client-protocol.h  linux-dmabuf-unstable-v1.xml  vulkan.c  wayland.c  wayland.c.patch  wayland_dmabuf.c  wayland_surface.c  wayland_surface.c.patch  wayland_surface_attach_dmabuf.inc  waylanddrv.h  waylanddrv.h.patch  waylanddrv_dmabuf_decls.h  winevulkan_dmabuf.c
app/src/main/cpp/winewayland-drv/wine/: debug.h
app/src/main/cpp/winlator/: fakeinput.cpp
app/src/main/cpp/winlator/vk/: vk_dispatch.c  vk_dispatch.h
app/src/main/cpp/wn-steam-client/rust/src/: cm_client.rs  cm_runtime.rs  depot_downloader.rs  emsg.rs  jni.rs  lib.rs
app/src/main/cpp/wn-steam-client/rust/src/pb/: cmsg_client_change_status.rs  cmsg_client_persona.rs  mod.rs
app/src/main/cpp/wn-steam-launcher/src/: main.cpp
app/src/main/feature/settings/containers/: ComponentInstallerSheet.kt  ContainerSettingsComposeDialog.kt  ContainersFragment.kt  ContainersScreen.kt
app/src/main/feature/settings/contents/: ComponentsScreen.kt
app/src/main/feature/settings/debug/: DebugScreen.kt
app/src/main/feature/settings/drivers/: DriversFragment.kt  DriversScreen.kt
app/src/main/feature/settings/input/: InputControlsFragment.kt  InputControlsScreen.kt
app/src/main/feature/settings/nav/: SettingsNavGraph.kt
app/src/main/feature/settings/other/: OtherSettingsFragment.kt  OtherSettingsScreen.kt
app/src/main/feature/settings/presets/: PresetsFragment.kt  PresetsScreen.kt
app/src/main/feature/settings/stores/: StoresScreen.kt
app/src/main/feature/setup/: SetupWizardActivity.kt
app/src/main/feature/shortcuts/: ShortcutSettingsComposeDialog.kt
app/src/main/feature/steamcloudsync/: SteamAutoCloud.kt  SteamCloudConflictDialog.kt  SteamCloudConflictUi.kt  SteamCloudHistoryProvider.kt  SteamCloudSyncHelper.kt  SteamExitCloudSync.kt  SteamLaunchCloudSync.kt  SteamSaveSnapshotManager.kt
app/src/main/feature/stores/gog/api/: GOGManifestParser.kt
app/src/main/feature/stores/steam/: SteamClientManager.kt
app/src/main/feature/stores/steam/service/: SteamService.kt
app/src/main/feature/stores/steam/utils/: PrefManager.kt  SteamUtils.kt
app/src/main/feature/stores/steam/wnsteam/: WnSteamSession.kt
app/src/main/feature/sync/: CloudSyncHelper.kt  EpicCloudConflictUi.kt  EpicLaunchCloudSync.kt  GogCloudConflictUi.kt
app/src/main/feature/sync/google/: GameSaveBackupManager.kt  GoogleScreen.kt
app/src/main/feature/sync/ui/: CloudSavesUIContent.kt
app/src/main/res/values/: arrays.xml  refs.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/runtime/container/: Container.java  ContainerCreation.kt  ContainerManager.java
app/src/main/runtime/content/component/: ComponentInstaller.kt
app/src/main/runtime/display/: XServerDisplayActivity.java  XServerDrawerMenu.kt
app/src/main/runtime/display/environment/: XEnvironment.java
app/src/main/runtime/display/environment/components/: GuestProgramLauncherComponent.java  WaylandBridgeComponent.java  WaylandBridgeServer.java
app/src/main/runtime/display/ui/: FrameRating.java  XServerSurfaceView.java
app/src/main/runtime/display/winhandler/: WinHandler.java
app/src/main/runtime/display/xserver/: XClient.java  XServer.java
app/src/main/runtime/input/controls/: FakeInputWriter.java
app/src/main/runtime/system/: LogManager.kt  SessionLogWriter.java
app/src/main/runtime/wine/: WaylandDriverInstaller.java  WineUtils.java
app/src/main/shared/android/: AppUtils.java  DirectoryPickerDialog.kt
app/src/main/shared/ui/dialog/: PopupDialog.kt
app/src/main/shared/ui/widget/: EnvVarsView.java
docs/: winevulkan-architecture-analysis.md
scripts/: test-winewayland-driver.sh
tools/: android-aarch64-cross.txt  build-bionic-bridge.sh  build-machine-native.txt
